sPlash Compiler/tests/negative/N_example12.sp
max:Int (a: Int, b:Int)